assets/css/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* @font-face {
  font-family: "ic";
  src: url("../../public/ic-g.otf");
} */

@font-face {
  font-family: 'ibm_reg';
  src: url('../../public/ibm_regular.otf');
}


@font-face {
  font-family: 'sfdisplay';
  src: url('../../public/SF-Display.otf');
}

@font-face {
  font-family: 'sftext';
  src: url('../../public/SF-Pro.ttf');
}

@font-face {
  font-family: 'sfbold';
  src: url('../../public/SF-Pro-Bold.otf');
}

@font-face {
  font-family: 'sflight';
  src: url('../../public/SF-Pro-Thin.otf');
}

* {
  background-color: rgb(248, 246, 241);
  padding: 0;
  margin: 0;
  font-family: "sftext", "sans-serif";
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

body {
  padding: 0;
  margin: 0;
}

mouse {
  cursor: url(../../public/mouse.png);
}

/* .ic {
  font-family: "ic", "sans-serif";
} */

.ibmreg {
  font-family: "ibm_reg", "sans-serif";
}

.sfdisplay {
  font-family: 'sfdisplay', 'sans-serif';
}

.sftext {
  font-family: 'sftext', 'sans-serif';
}

.sfbold {
  font-family: 'sfbold', 'sans-serif';
}

.sflight {
  font-family: 'sflight', 'sans-serif';
}

.basebg {
  background-color: rgb(248, 246, 241);
}

.text-xxs {
  font-size: 0.65rem;
}

-webkit-scrollbar {
  display: none;
}

a {
  text-decoration: none;
}

h1 {
  font-family: Inconsolata -g;
  font-size: 120px;
}

#category {
  font-family: IBM Plex Mono;
  font-weight: 500;
}

#title {
  letter-spacing: 0.4px;
  font-size: 22px;
  font-size: 1.375rem;
  line-height: 1.13636;
}

#banner {
  margin: 20px;
  height: 800px;
}

#editor {
  font-size: 16px;
  font-size: 1rem;
  line-height: 1.75;
}

.uk-navbar-container {
  background: #fff !important;
  font-family: IBM Plex Mono;
}

img:hover {
  opacity: 1;
  transition: opacity 0.25s cubic-bezier(0.39, 0.575, 0.565, 1);
}

